# agile-management-portal

./: .gitignore  .gitlab-ci.yml  .prettierignore  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  index.html  mkdocs.yml  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  zensical.toml
.github/workflows/: ci.yml  docs.yml
docs/: CONTRIBUTING.md  cost-rates.md  dashboard.md  data-management.md  extra.css  getting-started.md  import.md  index.md  keyboard-shortcuts.md  organization.md  people.md  pi-management.md  settings.md  updates.md
docs/overrides/: home.html
docs/stylesheets/: extra.css
overrides/: home.html
scripts/: sync-version.mjs
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs  schema.rs  seed.rs
src-tauri/src/models/: mod.rs
src/api/: index.ts
src/api/__tests__/: api.test.ts
src/components/common/: ModalContainer.tsx  ModalForms.tsx  SearchOverlay.tsx  UpdateBanner.tsx  UpdateModal.tsx  UpdateToast.tsx
src/components/dashboard/: ConflictTable.tsx  DashboardPage.tsx  (+4 more)
src/hooks/: useKeyboardShortcuts.ts  useUpdateChecker.ts
src/store/: appStore.ts  importStore.ts  modalStore.ts  navigationStore.ts  orgStore.ts  peopleStore.ts  piStore.ts  themeStore.ts  updateStore.ts
src/styles/: fonts.css  global.css
src/test/: helpers.ts  setup.ts
src/types/: index.ts
src/utils/: themeColors.ts
(+24 files in other folders)
