[package]
name = "helix-agile-portal"
version = "1.0.0"
description = "HELIX Agile Portal — SAFe Investment Tracker"
authors = ["Edmund Wallner - Mercedes-Benz AG"]
license = "UNLICENSED"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
tauri = { version = "2.10.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
csv = "1.3"
tauri-plugin-dialog = "2"
log = "0.4"
tauri-plugin-log = "2"
